change look in issue

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -853,9 +853,10 @@
 }
 
 .custom-color {
-    color: #046061;
     background-color: #70f8fa;
     border: 2px solid #81e6d9;
+    font-size: .8em;
+    padding: 0 10px !important;
 }
 
 .mult-select-tag {
