--- a/src/main/resources/templates/department.html
+++ b/src/main/resources/templates/department.html
@@ -18,6 +18,14 @@
 
 <body layout:fragment="content">
 
+    <!-- Spinner Start -->
+        <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+            <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+        </div>
+    <!-- Spinner End -->
+
 <div th:replace="fragments/sidebar :: sidebar"></div>
 
 <div
@@ -61,7 +69,7 @@
                         data-bs-toggle="modal"
                         data-bs-target="#add-department-modal"
                 >
-                    <i class="bi bi-building-fill-add"></i>
+                    <i class="bi bi-plus-lg"></i>
                 </button>
                 <!-- modal toggle button end -->
                 <!-- add department modal start -->
