--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -18,6 +18,13 @@
 <div
         class="container-fluid position-relative bg-white d-flex p-0"
 >
+     <!-- Spinner Start -->
+        <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+            <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+        </div>
+    <!-- Spinner End -->
 
     <div th:replace="fragments/sidebar :: sidebar"></div>
 
@@ -55,7 +62,7 @@
                         data-bs-toggle="modal"
                         data-bs-target="#add-department-modal"
                 >
-                    <i class="bi bi-building-fill-add"></i>
+                    <i class="bi bi-plus-lg"></i>
                 </button>
                 <!-- modal toggle button end -->
                 <!-- add department modal start -->
