--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,52 +6,16 @@
 
  -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+        xmlns="http://www.w3.org/1999/xhtml"
+        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+        layout:decorate="layout/layout"
+>
 
-<head>
-    <meta charset="utf-8" />
-    <title>DASHMIN - Bootstrap Admin Template</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta
-            name="keywords"
-            content="project, management, project management, teamplaceholder project management"
-    />
-    <meta content name="description" />
-    <meta name="author" content="teamplaceholder's project" />
-
-    <!-- Favicon -->
-    <!-- <link href="/images/favicon.ico" rel="icon"> -->
-
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-            href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&display=swap"
-            rel="stylesheet"
-    />
-
-    <!-- bootstrap icons -->
-    <link rel="stylesheet" href="/font/bootstrap-icons.min.css" />
-
-    <!-- Libraries Stylesheet -->
-    <link
-            href="/lib/owlcarousel/assets/owl.carousel.min.css"
-            rel="stylesheet"
-    />
-    <link
-            href="/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css"
-            rel="stylesheet"
-    />
-
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet" />
-
-    <!-- Template Stylesheet -->
-    <link href="/css/style.css" rel="stylesheet" />
-</head>
-
-<body>
-<div class="container-fluid position-relative bg-white d-flex p-0">
+<body layout:fragment="content">
+<div
+        class="container-fluid position-relative bg-white d-flex p-0"
+>
     <!-- Spinner Start -->
     <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
